# Api-project

./: .env  Dockerfile.dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
src/: main.py
src/infrastructure/: database_conextion.py
test/application/: test_health.py  test_main.py
test/domain/: test_user.py
test/infrastructure/: test_mg_conextion.py
